# zephyr_pro

./: esp32环境配置.docx  font_gen.py  font_gen1.py  font_gne1.py  openthread.docx  zephyr.signed.hex  zephyr总结.docx  ~$phyr总结.docx
IoT/: error.txt  zephyr.hex
IoT/client/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
IoT/client/boards/: nrf52840dk_nrf52840.overlay
IoT/client/extra_conf/: user_func.conf
IoT/client/src/: iot_producer.c  main.c  main.h
IoT/client/src/communicate/inc/: crs_debug_uart.h  crs_rtio_uart.h  iot_ble.h  iot_openthread.h
IoT/client/src/communicate/src/: crs_ble.c  crs_debug_uart.c  crs_openthread.c  crs_rtio_uart.c  iot_openthread.c
IoT/client/src/devices/inc/: crs_as201_imu.h  crs_blink.h  crs_bmp280_ps.h  crs_coap_blink.h  crs_coap_button.h  crs_hrbo.h  iot_aht20_ts.h  iot_button.h  iot_ld2410c_ddrs.h  iot_led.h
IoT/client/sysbuild/: mcuboot.conf
IoT/coap_control_board/: CMakeLists.txt  prj.conf
IoT/coap_control_board/boards/: nrf52840dk_nrf52840.overlay
IoT/coap_control_board/src/: ble_utils.h  coap_client_button.c  coap_client_button.h  coap_client_oled.c  coap_client_oled.h  coap_client_utils.c  coap_client_utils.h  coap_list.c  coap_list.h  font_table.c  font_table.h  includes.h  list.c  list.h  main.c  user_nvs.c  user_nvs.h
crs_demo/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf
crs_demo/boards/: nrf52840dk_nrf52840.overlay
crs_demo/dts/bindings/: vnd,uart.yaml
crs_demo/src/: main.c  main.h
crs_demo/src/communicate/inc/: crs_debug_uart.h  crs_open_thread.h
crs_demo/src/communicate/src/: crs_ble.c  crs_debug_uart.c  crs_open_thread.c  crs_rtio_uart.c  vnd_uart.c
crs_demo/src/devices/inc/: crs_aht20_ts.h  crs_as201_imu.h  crs_ble.h  crs_blink.h  crs_bmp280_ps.h  crs_coap_blink.h  crs_debug_uart.h  crs_hrbo.h  crs_ld2410c_ddrs.h
crs_demo/src/devices/src/: crs_aht20_ts.c  crs_as201_imu.c  crs_ble.c  crs_blink.c  crs_bmp280_ps.c  crs_coap_blink.c  crs_coap_button.c  crs_debug_uart.c  crs_hrbo.c  crs_ld2410c_ddrs.c  crs_producer.c  crs_rtio_uart.c  vnd_uart.c
crs_demo/src/protocol/src/: coap_shell.c  crs_producer.c
crs_demo/sysbuild/: mcuboot.conf
func_demo/: CMakeLists.txt  Kconfig  main.c  main.h  prj.conf
func_demo/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nucleo_h533re.overlay
func_demo/devices/inc/: func_blinky.h  func_bmp280_ps.h  func_spi.h  func_uart.h
func_demo/devices/src/: func_blinky.c  func_bmp280_ps.c  func_spi.c  func_uart.c
(+99 files in other folders)
